...
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <!-- Orders List View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ordersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            tools:listitem="@layout/order_list_item"
            tools:visibility="gone"/>

...
