...
            android:padding="@dimen/image_frame_stroke_width"
            app:srcCompat="@drawable/ic_product"
            tools:visibility="visible" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/productInfo_name"
        style="@style/Woo.ListItem.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constrainedWidth="true"
...
