package com.woocommerce.android.ui.orders

import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.Visibility.GONE
import androidx.test.espresso.matcher.ViewMatchers.Visibility.VISIBLE
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.google.gson.Gson
import com.woocommerce.android.R
import com.woocommerce.android.helpers.WCMatchers.withRecyclerView
import com.woocommerce.android.ui.TestBase
import com.woocommerce.android.ui.main.MainActivityTestRule
import org.junit.Assert.assertSame
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.wordpress.android.fluxc.model.SiteModel

@RunWith(AndroidJUnit4::class)
@LargeTest
class OrderDetailProductCardTest : TestBase() {
    @Rule
    @JvmField var activityTestRule = MainActivityTestRule()

    @Before
    override fun setup() {
        super.setup()
        // Bypass login screen and display dashboard
        activityTestRule.launchMainActivityLoggedIn(null, SiteModel())

        // Make sure the bottom navigation view is showing
        activityTestRule.activity.showBottomNav()

        // add mock data to order list screen
        activityTestRule.setOrderListWithMockData()

        // Click on Orders tab in the bottom bar
        onView(withId(R.id.orders)).perform(click())
    }

    @Test
    fun verifyProductCardViewPopulatedSuccessfullyForSingleProduct() {
        val lineItems = Gson().toJson(
                listOf(
                        mapOf(
                                "productId" to "290",
                                "variationId" to "0",
                                "name" to "Black T-shirt",
                                "quantity" to 1,
                                "subtotal" to 10
                        )
                )
        )
        val mockWCOrderModel = WcOrderTestUtils.generateOrderDetail(products = lineItems)
        activityTestRule.setOrderDetailWithMockData(mockWCOrderModel)

        // click on the first order in the list and check if redirected to order detail
        onView(withId(R.id.ordersList))
                .perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(1, click()))

        // check if order product card label matches this title:
        // R.string.orderdetail_product
        onView(withId(R.id.productList_lblProduct)).check(matches(
                withText(appContext.getString(R.string.orderdetail_product))
        ))

        // check if product list is 1
        val recyclerView = activityTestRule.activity.findViewById(R.id.productList_products) as RecyclerView
        assertSame(1, recyclerView.adapter?.itemCount)
    }

    @Test
    fun verifyProductCardViewPopulatedSuccessfullyForMultipleProducts() {
        val mockWCOrderModel = WcOrderTestUtils.generateOrderDetail()
        activityTestRule.setOrderDetailWithMockData(mockWCOrderModel)

        // click on the first order in the list and check if redirected to order detail
        onView(withId(R.id.ordersList))
                .perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(1, click()))

        // check if product list is 2
        val recyclerView = activityTestRule.activity.findViewById(R.id.productList_products) as RecyclerView
        assertSame(2, recyclerView.adapter?.itemCount)
    }

    @Test
    fun verifyProductCardDetailsButtonVisibleForOrderStatusNotMarkedAsProcessing() {
        val mockWCOrderModel = WcOrderTestUtils.generateOrderDetail(
                orderStatus = "Completed"
        )
        activityTestRule.setOrderDetailWithMockData(mockWCOrderModel)

        // click on the first order in the list and check if redirected to order detail
        onView(withId(R.id.ordersList))
                .perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(1, click()))

        // verify if the details button is visible
        onView(withId(R.id.productList_btnDetails)).check(matches(ViewMatchers.withEffectiveVisibility(VISIBLE)))

        // verify if the fulfill button is not visible
        onView(withId(R.id.productList_btnFulfill)).check(matches(ViewMatchers.withEffectiveVisibility(GONE)))
    }

    @Test
    fun verifyProductCardFulfillButtonVisibleForOrderStatusMarkedAsProcessing() {
        val mockWCOrderModel = WcOrderTestUtils.generateOrderDetail(
                orderStatus = "Processing"
        )
        activityTestRule.setOrderDetailWithMockData(mockWCOrderModel)

        // click on the first order in the list and check if redirected to order detail
        onView(withId(R.id.ordersList))
                .perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(1, click()))

        // verify if the details button is not visible
        onView(withId(R.id.productList_btnFulfill)).check(matches(ViewMatchers.withEffectiveVisibility(GONE)))

        // verify if the fulfill button is visible
        onView(withId(R.id.productList_btnDetails)).check(matches(ViewMatchers.withEffectiveVisibility(VISIBLE)))
    }

    @Test
    fun verifyProductCardViewDetailsPopulatedSuccessfully() {
        val mockWCOrderModel = WcOrderTestUtils.generateOrderDetail()
        activityTestRule.setOrderDetailWithMockData(mockWCOrderModel)

        // click on the first order in the list and check if redirected to order detail
        onView(withId(R.id.ordersList))
                .perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(1, click()))

        // verify if the details button is not visible
        onView(withId(R.id.productList_btnFulfill)).check(matches(ViewMatchers.withEffectiveVisibility(GONE)))

        // verify if the fulfill button is visible
        onView(withId(R.id.productList_btnDetails)).check(matches(ViewMatchers.withEffectiveVisibility(VISIBLE)))

        // verify if the first product name matches: Black T-shirt
        onView(withRecyclerView(R.id.productList_products).atPositionOnView(0, R.id.productInfo_name))
                .check(matches(withText(mockWCOrderModel.getLineItemList()[0].name)))

        // verify if the second product quantity matches: 2
        onView(withRecyclerView(R.id.productList_products).atPositionOnView(1, R.id.productInfo_totalPaid))
                .check(matches(withText(mockWCOrderModel.getLineItemList()[1].quantity?.toInt().toString())))
    }
}
